# AMI

./: .gitignore  Cargo.toml  build.rs  package-lock.json
beats/: disco_1.dmp  disco_2.dmp  funk_1.dmp  funk_2.dmp  heavy_metal_1.dmp  heavy_metal_2.dmp  jazz_1.dmp  jazz_2.dmp  jazz_3.dmp  jazz_4.dmp  metronome2.dmp  metronome3.dmp  metronome4.dmp  metronome5.dmp  metronome6.dmp  metronome7.dmp  metronome8.dmp  metronome9.dmp  pop_rock_1.dmp  pop_rock_2.dmp  pop_rock_3.dmp  pop_rock_4.dmp  pop_rock_5.dmp  pop_rock_6.dmp  pop_rock_in_34.dmp  pop_rock_in_68.dmp
client/: .prettierrc  package-lock.json  package.json  tailwind.config.js
client/src/: app.css
client/src/lib/comp/file_browser/: FileBrowser.svelte  Inputs.svelte  PathInspector.svelte
client/src/lib/comp/form/: Button.svelte  InputText.svelte  Select.svelte
client/src/lib/comp/keyboard_editor/: Keyboard.svelte  KeyboardEditor.svelte
client/src/lib/comp/section/: ControlNodeList.svelte  ControlNodes.svelte  Controller.svelte  DrumMachine.svelte  Log.svelte  MidiPorts.svelte  NodeList.svelte  Nodes.svelte  RenderNodeList.svelte  RenderNodes.svelte  Settings.svelte
client/src/lib/comp/section/comp/: Content.svelte  Header.svelte  Keyboard.svelte  (+4 more)
client/src/lib/js/: api.js  app.js  util.js
client/src/routes/: +page.svelte
dist_old/: api.js  index.html
external_c_cpp/sfizz_wrapper/: CMakeLists.txt  budle_static_library.cmake
src/: deser.rs  json.rs  main.rs  path.rs  rhythm.rs  webserver.rs
src/audio/: info.rs  mod.rs  output.rs
src/control/: controller.rs  drum_machine.rs  mod.rs  voices.rs
src/control/command/: mod.rs
src/control/node/: drum_machine.rs  mod.rs
src/midi/: mod.rs  msg.rs  reader.rs
src/render/: midi_filter.rs  mod.rs  preset_map.rs  renderer.rs  rhythm.rs  velocity_map.rs
src/render/command/: midi_filter.rs  mod.rs
src/render/node/: fluidlite_synth.rs  mod.rs  oxi_synth copy.rs  oxi_synth.rs  rusty_synth.rs  sfizz_synth.rs  sound_font_synth.rs
src/synth/: mod.rs  sfizz.rs
(+19 files in other folders)
