[package]
name = "ami"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
axum-embed = "0.1"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
clap = { version = "4.4", features = ["derive"] }
cpal = "0.15.3"
fluidlite = { version = "0.2.1", features = ["builtin", "with-sf3", "static", "with-stb"] }
futures = "0.3.30"
midir = "0.10.0"
oxisynth = { version="0.0.5", features=["sf3"] }
rust-embed = "8.4"
rustysynth = "1.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
