
set(ENABLE_LTO OFF CACHE INTERNAL "" FORCE)
set(SFIZZ_JACK OFF CACHE INTERNAL "" FORCE)
set(SFIZZ_RENDER OFF CACHE INTERNAL "" FORCE)
set(SFIZZ_BENCHMARKS OFF CACHE INTERNAL "" FORCE)
set(SFIZZ_TESTS OFF CACHE INTERNAL "" FORCE)
set(SFIZZ_DEMOS OFF CACHE INTERNAL "" FORCE)
set(SFIZZ_DEVTOOLS OFF CACHE INTERNAL "" FORCE)
set(SFIZZ_SHARED OFF CACHE INTERNAL "" FORCE)
set(SFIZZ_USE_SNDFILE OFF CACHE INTERNAL "" FORCE)
set(SFIZZ_USE_SYSTEM_ABSEIL OFF CACHE INTERNAL "" FORCE)
set(SFIZZ_USE_SYSTEM_GHC_FS OFF CACHE INTERNAL "" FORCE)
set(SFIZZ_USE_SYSTEM_SIMDE OFF CACHE INTERNAL "" FORCE)
set(SFIZZ_USE_SYSTEM_KISS_FFT OFF CACHE INTERNAL "" FORCE)
set(SFIZZ_USE_SYSTEM_PUGIXML OFF CACHE INTERNAL "" FORCE)
set(SFIZZ_USE_SYSTEM_CXXOPTS OFF CACHE INTERNAL "" FORCE)
set(SFIZZ_USE_SYSTEM_CATCH OFF CACHE INTERNAL "" FORCE)
set(SFIZZ_RELEASE_ASSERTS OFF CACHE INTERNAL "" FORCE)
set(SFIZZ_PROFILE_BUILD OFF CACHE INTERNAL "" FORCE)
set(SFIZZ_SNDFILE_STATIC OFF CACHE INTERNAL "" FORCE)
set(SFIZZ_ASAN OFF CACHE INTERNAL "" FORCE)

add_subdirectory("sfizz")

include(budle_static_library.cmake)
bundle_static_library(sfizz_static sfizz_static_bundled)